libmeegosyncml (0.4.12) stable; urgency=low

  * Fixes: NB#223952 - Not all the contacts are syncd from DUT to S60

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Thu, 03 Feb 2011 14:40:03 +0530

libmeegosyncml (0.4.11) stable; urgency=low

  * 1. Please try to use 3 digits for the version x.y.z - 0.0.1
  * 2. When something significant happens (sprint, X-something review) increase second digit - 0.1.0
  * 3. When something very significant happens (dali release, etc) increase  first digit - 1.0.0
  * 4. Whenever regular changes in the code are done (bugfixes, minor
       features implemented) please always increment the last digit - 0.0.2.

 -- Mallikarjun Hunalli <mallikarjun.hunalli@nokia.com>  Mon, 31 Jan 2011 18:00:00 +0530

libmeegosyncml (0.4.10-7) stable; urgency=low

  * Fixes - Removed the "silent" option set in CONFIG of a pro file

 -- Mallikarjun Hunalli <mallikarjun.hunalli@nokia.com>  Tue, 27 Jan 2011 18:00:00 +0530

libmeegosyncml (0.4.10-6) stable; urgency=low

  * Fixes: NB#201619 - Synchronization is stuck in the progress indicator screen when the internet is interrupted while sync.

 -- Amit <amit.5.aggarwal@nokia.com>  Tue, 25 Jan 2011 18:00:00 +0530

libmeegosyncml (0.4.10-5) stable; urgency=low

  * Fixes - Bookmark sync support removed

 -- Mallikarjun Hunalli <mallikarjun.hunalli@nokia.com>  Thu, 20 Jan 2011 18:00:00 +0530

libmeegosyncml (0.4.10-4) stable; urgency=low

  * Fixes: NB#204328 - msyncd crashed while resyncing SMS after sync
    fails with S40(5310), remote initiated

 -- Amit <amit.5.aggarwal@nokia.com>  Mon, 17 Jan 2011 10:00:00 +0200

libmeegosyncml (0.4.10-3) stable; urgency=low
 
  * Deleting the waiting bug.
 
 -- Amit <amit.5.aggarwal@nokia.com>  Thu, 30 Dec 2010 16:25:00 +0530

libmeegosyncml (0.4.10-1) stable; urgency=low

  * Fixes: NB#212083 - Consecutive sync (after a successful sync) with ovi.com always fails.